Fix spacing above reading headers

--- a/website2/app/src/styles/document.css
+++ b/website2/app/src/styles/document.css
@@ -38,6 +38,10 @@
   font-size: 1rem;
 }
 
+.document > header {
+  margin-top: 1rem;
+}
+
 .document > header,
 .psalm > section > header {
   display: flex;
